# FromProm

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  SELF_HOSTED_GITLAB_RUNNER_SETUP.md  index.html  package-lock.json  run.py  test_client.py  test_request.json
service/ai-service/: .bedrock_agentcore.yaml  .env.example  .gitignore  .gitlab-ci.yml  AGENTCORE_DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  Dockerfile  README.md  agent.py  pyproject.toml  sonar-project.properties  test_agent_tools.py  test_env_setup.py  test_full_hallucination.py  test_hallucination_detection.py  test_json_parsing.py  test_mock_status.py  test_strands_evaluation.py  test_strands_framework.py  test_strands_installation.py  test_strands_simple.py  test_supervisor_pattern.py  update_agent.py
service/ai-service/.bedrock_agentcore/ai_service/: Dockerfile
service/ai-service/app/: main.py  test_bug.py
service/ai-service/app/agents/: agent_pipeline.py  strands_supervisor_agent.py
service/ai-service/app/cache/: grounding_cache.py
service/ai-service/app/core/: config.py  logging.py  schemas.py
service/ai-service/app/orchestrator/: pipeline.py
service/ai-service/app/storage/: dynamodb_s3_repo.py  sqs_worker.py
service/ai-service/lambda/: .gitignore  LAMBDA_SETUP.md  README.md  agentcore-iam-policy.json  iam-policy.json  lambda_handler.py  requirements.txt  test_lambda.py
service/ai-service/lambda/test-events/: evaluate-dynamodb.json  evaluate-simple.json  get-metrics.json  get-models.json
service/ai-service/outputs/2a54b37d-2bfa-4ce2-b509-65c2df36abeb/: examples.json
src/: App.tsx
(+212 files in other folders)
