[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-eval"
version = "0.1.0"
description = "Prompt evaluation agent for Amazon Bedrock AgentCore"
requires-python = ">=3.10"
dependencies = [
    # AgentCore SDK
    "bedrock-agentcore>=1.2.0",
    "bedrock-agentcore-starter-toolkit>=0.2.6",
    "strands-agents>=0.1.0",
    
    # X-Ray
    "aws-xray-sdk>=2.12.0",
    
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.0",
    
    # Evaluation
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    
    # Async
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "aiohttp>=3.8.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
# FastAPI는 로컬 테스트용으로만 사용
local = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
# AgentCore 배포 시 진입점
prompt-eval-agent = "agent:agent"